--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/multer": "^1.4.11",
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
